Fix lightbox on mobile devices, It used to look distorted dues to 512px meta size

--- a/assets/css/mpp-core.css
+++ b/assets/css/mpp-core.css
@@ -689,7 +689,7 @@ div.mpp-activity-comments form div.mpp-ac-reply-content a {
 	bottom: 0;
 	left: 0;
 	min-height: 25px;
-	width: 520px;
+	width: 100%;
 	margin: 0;
 	padding: 5px 20px;
 	box-sizing: border-box;
